--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <ul>
                 <li><a href="#" onclick="startLeaderBoard()">Leaderboard</a></li>
                 <li><a href="#" onclick="showQuestions()">QuizTemplate</a></li>
-                <li><a href="./assessment.pdf" target="_blank" >System Architecture</a></li>
+                <li><a href="./images/assessment.pdf" target="_blank" >System Architecture</a></li>
             </ul>
         </div>
     </div>
